[gd_scene load_steps=6 format=3 uid="uid://do00ox8dj8j6i"]

[ext_resource type="Script" path="res://pipe.gd" id="1_kl1hg"]
[ext_resource type="Texture2D" uid="uid://den4sx3n8oo4t" path="res://Assets/pipe.png" id="2_vn661"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8dp1s"]
size = Vector2(72, 525)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgptx"]
size = Vector2(78, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0b0tf"]
size = Vector2(39, 253)

[node name="Pipe" type="Area2D" groups=["pipes"]]
script = ExtResource("1_kl1hg")

[node name="Upper" type="Sprite2D" parent="."]
texture = ExtResource("2_vn661")
offset = Vector2(0, -380)
flip_v = true

[node name="CollisionUpper1" type="CollisionShape2D" parent="."]
position = Vector2(0, -399)
shape = SubResource("RectangleShape2D_8dp1s")

[node name="CollisionUpper2" type="CollisionShape2D" parent="."]
position = Vector2(0, -118)
shape = SubResource("RectangleShape2D_mgptx")

[node name="Lower" type="Sprite2D" parent="."]
texture = ExtResource("2_vn661")
offset = Vector2(0, 380)

[node name="CollisionLower1" type="CollisionShape2D" parent="."]
position = Vector2(0, 397.5)
shape = SubResource("RectangleShape2D_8dp1s")

[node name="CollisionLower2" type="CollisionShape2D" parent="."]
position = Vector2(0, 117.5)
shape = SubResource("RectangleShape2D_mgptx")

[node name="ScoreArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea"]
position = Vector2(63, -5)
shape = SubResource("RectangleShape2D_0b0tf")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="ScoreArea" to="." method="_on_score_area_body_entered"]
